Issue #SB-26775 fix: ​The Name and Description fields alignment is also not proper

--- a/src/app/client/src/assets/styles/pages/_dock.scss
+++ b/src/app/client/src/assets/styles/pages/_dock.scss
@@ -1080,3 +1080,7 @@ app-question-set-editor{
     background: none !important;
   }
 }
+
+.w-73 .two-column-grid.formSection:first-child .sb-g-col-lg-1:nth-child(2n) .sb-textarea-container {
+  margin: 1rem 0!important;
+}
